# openvino_yolact

./: CMakeLists.txt  README.md  detector.cpp  detector.h  main.cpp
